--- a/calc/app/src/main/res/layout/activity_main.xml
+++ b/calc/app/src/main/res/layout/activity_main.xml
@@ -14,10 +14,20 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/prevText"
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
+            android:gravity="bottom|right"
+            android:textSize="30dp"
+            android:text="@{calc.prevDisplay}" />
+
+        <TextView
+            android:id="@+id/currText"
             android:layout_width="match_parent"
             android:layout_height="163dp"
-            android:text="@{calc.display}" />
+            android:gravity="bottom|right"
+            android:textSize="45dp"
+            android:text="@{calc.currDisplay}" />
 
         <LinearLayout
             android:layout_width="match_parent"
